# memorymodule-rs

./: .gitmodules  Cargo.toml  build.rs
demo/mydll/: .gitignore  README.md  mydll.c
demo/myrustapp/: Cargo.toml
demo/myrustapp/src/: main.rs
src/: lib.rs
