[package]
name = "memorymodule-rs"
description = "Rust wrapper for MemoryModule"
version = "0.0.2"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
include = ["/build.rs", "/src/**/*", "/vendor/MemoryModule/MemoryModule.*"]
license = "MIT"

[dependencies]
libc = "0.2.72"

[build-dependencies]
cc = "1.0.58"
